.config/kubernetes/test/first/health-ingress-sample.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: healthtracker
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - ncovtracker.xyz
      secretName: healthtracker-tls
  rules:
    - host: ncovtracker.xyz
      http:
        paths:
          - backend:
              serviceName: website
              servicePort: 8080
