.config/kubernetes/test/first/healthtracker-ingres-local.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: healthtracker
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  backend:
    serviceName: website
    servicePort: 8080
  rules:
    - host: viper.net
      http:
        paths:
          - path: /account(/|$)(.*)
            backend:
              serviceName: account
              servicePort: 8080
          - path: /government(/|$)(.*)
            backend:
              serviceName: government
              servicePort: 8080
          - path: /infection
            backend:
              serviceName: infection
              servicePort: 8080
          - path: /notification
            backend:
              serviceName: notification
              servicePort: 8080
          - path: /authentication
            backend:
              serviceName: authentication
              servicePort: 7070
          - path: /resource
            backend:
              serviceName: resource
              servicePort: 9000
          - path: /hospital(/|$)(.*)
            backend:
              serviceName: hospital
              servicePort: 8080
          - path: /person(/|$)(.*)
            backend:
              serviceName: person
              servicePort: 8080
